[tool.poetry]
name = "boyle"
version = "0.5.0"
description = "Simulation model for biogas production."
authors = ["Vignesh Krishnamoorthy <k.vignesh.krish@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
numpy = "^1.14"
scipy = "^1.1"
h5py = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pyaml = "^17.12"
